Finalized the index html code to be tweaked through style CSS.

--- a/index.html
+++ b/index.html
@@ -12,5 +12,21 @@
         <h1>Weather Dashboard</h1>
     </header>
     
+    <div class="container">
+        <div class="row">
+            <h4>Search For a City:</h4>
+            <div class="form-inline">
+                <input type="text" id="searchresult" placeholder="Search City Name...">
+                <button class="btn btn-primary" id="searchbutton"></button>
+
+                <ul class="search-history"> </ul>
+
+                <div class="col-md-9">
+                    <div id="current-weather"></div>
+                    <div id="five-day-forecast"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
